# pseudolabel_auxdata

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.json  pyproject.toml  readme.md  readme.md~89c99dd (Update readme.md)
01_datapreperation/: 01_T_generation_images.sh  02_preprocessing_synchronized_thresholds.ipynb  03_run_melloddy_tuner.sh  04_generating_x_image_features.ipynb  T_generation.py
02_image_model_training/: submit.sh
04_aux_data_preperation/: 01_run_melloddy_tuner.sh  02_generate_cls_weights.sh  generate_cls_weights.py
05_aux_data_training/: 01_setup_run_folders_aux.bash  02_submit_all_aux.bash  prepare_HP_scan_aux.py  prepare_HP_scan_baseline.py  run_sparsechem_aux.TEMPLATE.sh  run_sparsechem_baseline.TEMPLATE.sh  submit.sh
06_aux_data_predictions/: 02_submit_all_aux.bash  prepare_preds_aux.py  run_sparsechem_aux.TEMPLATE.sh  run_sparsechem_baseline.sh  submit_aux.sh  submit_baseline.sh
aux_data_predictions/: 01_setup_run_folders_aux.bash  prepare_preds_aux.py  run_sparsechem_aux.TEMPLATE.sh  run_sparsechem_baseline.sh  submit_aux.sh  submit_baseline.sh
aux_data_preperation/: 01_run_melloddy_tuner.sh  generate_cls_weights.py
aux_data_training/: 01_setup_run_folders_aux.bash  02_submit_all_aux.bash  03_run_sparsechem_baseline.sh  prepare_HP_scan_aux.py  prepare_HP_scan_baseline.py  run_sparsechem_aux.TEMPLATE.sh  run_sparsechem_baseline.TEMPLATE.sh  submit.sh  submit_aux.sh
datapreperation/: 01_preprocessing_synchronized_thresholds.ipynb  02_run_melloddy_tuner.sh  03_generating_x_image_features.ipynb  README.md
image_model/: 01_setup_run_folders.bash  prepare_HP_scan.py  run_sparsechem.TEMPLATE.sh  submit.sh
image_model_training/: 02_submit_all.bash  run_sparsechem.TEMPLATE.sh  submit.sh
image_predictions/: 01_link_files.bash  cls_T11_x_features.npz
pseudolabel/: __init__.py  cli.py  constants.py  cp_fitting.py  cp_utils.py  errors.py  hti_cnn.py  hyperparameters_scan.py  pipe.py  pipeline_steps.py  predict_all_images.py  predict_images_filter.py  predict_images_fold2.py  predict_images_fold_val.py  pseudolabel_config.py  t_pseudolabels_generation.py  utils.py
tests/: conftest.py  (+8 more)
(+84 files in other folders)
