[tool.poetry]
name = "pseudolabel"
version = "0.1.0"
description = "Ready to deliver"
authors = ["Iktos"]
readme = "README.md"
packages = [
    { include = "pseudolabel" },
    { include = "pseudolabel/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.3.3"
scipy = "^1.7.1"
alive-progress = "^2.0.0"
tqdm = "^4.62.3"
rdkit-pypi = "^2021.3.5"
dask = "*"
matplotlib = "^3.4.3"
# melloddy-tuner = { git = "git@git.infra.melloddy.eu:wp1/data_prep.git", branch = "master" }
torch = "*"
pandera = "^0.8.0"
jsonschema = "^4.2.1"
pynvml = "^11.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
flake8-colors = "^0.1.9"
mypy = "^0.910"
black = "==20.8b1"
pytest = "^6.2.2"
pytest-cov = "^3.0.0"
isort = "^5.9.0"
taskipy = "^1.2.1"

[tool.poetry.scripts]
pseudolabel-pipe = "pseudolabel.cli:run_pipe"
pseudolabel-partial-pipe = "pseudolabel.cli:run_parital_pipe"

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
ignore_errors = true

[tool.taskipy.tasks]
black = "black pseudolabel/"
pc-black = "black "
check-black = "black pseudolabel/ --check"
pc-check-black = "black --check"
isort = "isort pseudolabel/"
pc-isort = "isort "
linter = "flake8 pseudolabel/"
pc-linter = "flake8 "
mypy = "mypy pseudolabel/"
pc-mypy = "mypy "
test = "python -m pytest --cov-report=term --cov-report=html:cov_html --cov ./pseudolabel ./tests/test_pipe.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
known_localpkg = "pseudolabel"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALPKG,LOCALFOLDER"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = [".venv/*", "**/virtualenvs/**"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
